...
              onTap: () => _addContent('note'),
              iconColor: Colors.grey[800],
              textColor: Colors.grey[800],
            ),
            IconColumn(
              icon: Icons.videocam,
              label: "Video",
              isEnabled: _activeContentTypes['video']!,
              onTap: () => _addContent('video'),
              iconColor: Colors.grey[800],
              textColor: Colors.grey[800],
            ),
            IconColumn(
              icon: Icons.photo,
              label: "Photo",
              isEnabled: _activeContentTypes['photo']!,
              onTap: () => _addContent('photo'),
              iconColor: Colors.grey[800],
              textColor: Colors.grey[800],
            ),
          ],
...
